--- a/src/app/notification/notification.component.scss
+++ b/src/app/notification/notification.component.scss
@@ -3,3 +3,19 @@
 .important {
   font-weight: bold;
 }
+
+.card {
+    margin-bottom: 50px
+}
+
+.card-close {
+    float: right;
+    font-style: normal;
+    font-weight: 500;
+    color: $dark-background;
+}
+.card-close:hover, .card-close:active, .card-close:focus {
+    color: $main-colour;
+    text-decoration: none;
+    cursor: pointer;
+}
