--- a/src/app/subscription-editor/subscription-editor.component.scss
+++ b/src/app/subscription-editor/subscription-editor.component.scss
@@ -4,7 +4,6 @@
     flex-grow: 2;
     padding: 20px 100px;
     background-color: $dark-background;
-    height: 100%;
     color: $background-colour;
 
     animation: grow 1s ease;
@@ -14,6 +13,28 @@
 .subscription-editor .fade-in {
     animation: fade-in 2s ease;
     animation-iteration-count: 1;
+}
+
+.subscription-editor .grid {
+    display: flex;
+}
+
+.subscription-editor .grid app-subscription-list {
+    flex-grow: 1;
+}
+
+.subscription-editor .grid app-subscription-details {
+    flex-grow: 4;
+}
+
+app-subscription-list, app-subscription-details {
+    margin-top: 20px;
+}
+
+@media (max-width: 400px) {
+    .subscription-editor .grid {
+        display: block;
+    }
 }
 
 @keyframes fade-in {
@@ -28,7 +49,6 @@
     }
 }
 
-
 @keyframes grow {
     0% {
         margin-left: 100%;
@@ -37,6 +57,6 @@
     }
     100% {
         margin-left: 0;
-        height:100%
+        height: 100%
     }
 }
