--- a/src/app/notification/notification.component.html
+++ b/src/app/notification/notification.component.html
@@ -6,6 +6,7 @@
   <div class="card-body">
     <h4 class="card-title">{{notification.title}}</h4>
     <p class="card-text">{{notification.message}}</p>
-    <a [href]="notification.action.url" class="btn btn-primary">{{notification.action.text}}</a>
+    <a [href]="notification.action.url" target="_parent"
+       class="btn btn-primary">{{notification.action.text}}</a>
   </div>
 </div>
