Fix: When all notifications are marked as read, "nothing to do" does not appear.

--- a/src/app/notification-list/notification-list.component.html
+++ b/src/app/notification-list/notification-list.component.html
@@ -8,7 +8,8 @@
 
     <app-notification
         *ngFor="let notification of notifications"
-        [notification]="notification">
+        [notification]="notification"
+        (onRead)="markAsRead(notification)">
     </app-notification>
 
 </div>
